--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         <div class="services-box">
           <i class='bx bxs-video' ></i>
-          <h3>Vedio Editing</h3>
+          <h3>Video Editing</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis eaque praesentium necessitatibus error tempore. Consequuntur quae velit debitis </p>
           <a href="#" class="btn">Read More</a>
         </div>
